# PhysPath

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
src/: RegisterVcpkgUsdPlugins.h  color_buffer.h  gpu_kernels.cu  gpu_main.cpp  pp_cpu_hello.cpp  pp_write_exr.cpp  usd_loader.cpp  usd_plugin_bootstrap.cpp
src/camera/: camera.h
src/gpu/: gpu_kernels.cu  launch_params.h
